test/bad/0_comment.prog
// This is a good comment.

/* This is not a good comment. */

/ Neither is this.

Nor this.

proc p
    skip
end
